order by favorites on user show page. hey bobbbbbay

--- a/app/views/rants/_form.html.erb
+++ b/app/views/rants/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="rant-form">
-  <%= form_for [@user, @rant] do |f| %>
+  <%= form_for [current_user, @rant] do |f| %>
 
     <% if @rant.errors.any? %>
       <% @rant.errors.full_messages.each do |message| %>
