--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -54,6 +54,8 @@
         <%= f.label :Monthly %>
         <%= f.radio_button :frequency, :monthly %>
       </div>
+
+      <%= form.file_field :avatar %>
       <div>
         <%= f.submit "REGISTER", :class => 'button' %>
       </div>
