--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,9 +11,9 @@
     <div class="letitout">
       <h5>Let it all out</h5>
     </div>
-    <% if @user != current_user %>
-    <div class="welcome-back">HIHIHIHI</div>
-      <% end %>
+
+    <!--<div class="welcome-back">HIHIHIHI</div>-->
+
   </div>
 
 
