--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -4,7 +4,7 @@
     <br>
 
     <div class="user">
-      <%= link_to @user.username, edit_user_path(@user) %>
+      <%= link_to current_user.username, edit_user_path(current_user) %>
     </div>
     <% if alert %>
       <%= alert %>
@@ -17,21 +17,21 @@
   <div class="latest-rants">
     <h3>Latest Rants</h3>
 
-    <% other_users.each do |user| %>
+
 
       <div class="rant-paragraph">
-        <% user.rants.each do |rant| %>
+        <% @rants.each do |rant| %>
           <br>
 
           <div class="topic">
-            <p> <%= link_to user.first_name, user_path(user.id) %></p>
+            <p> <%= link_to rant.user.first_name, user_path(rant.user.id) %></p>
 
             <div class="other-img">
               <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width=100px height=100px/>
-              <% unless followed(user) %>
-              <%= link_to "Follow", user_follows_path(user), method: :post %>
+              <% unless followed(rant.user) %>
+              <%= link_to "Follow", user_follows_path(rant.user), method: :post %>
                 <% else %>
-              <%= link_to "Unfollow", user_follow_path(user, @follow), method: :delete %>
+              <%= link_to "Unfollow", user_follow_path(rant.user, @follow), method: :delete %>
                 <% end  %>
             </div>
           </div>
@@ -49,24 +49,24 @@
 
           </div>
         <% end %>
-    <% end %>
+
     </div>
 
     <h3>My Rants</h3>
     <ul>
       <div class="rants">
         <div class="ranter">
-          <%= @user.first_name %>
+          <%= current_user.first_name %>
           <br>
           <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width=100px height=100px/>
 
         </div>
         <div class="rant-paragraph">
 
-          <% @user.rants.each do |rant| %>
+          <% current_user.rants.each do |rant| %>
             <p> <%= rant.rant %> </p>
             <br>
-            <%= link_to "Delete", user_rant_path(@user, rant), method: :delete %>
+            <%= link_to "Delete", user_rant_path(current_user, rant), method: :delete %>
             <br>
           <% end %>
 
