favorites working now herokuuu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <% if current_user %>
       <div class="middle">
         <%= link_to "Dashboard", dashboard_path %> | <%= link_to "Following", user_follows_path(current_user.id) %>
-        | <%= link_to "Favorites", user_favorites_path(current_user.id) %> | <%= link_to "Search", search_index_path %>
+        | <%= link_to "Favorites", user_favorites_path(current_user.id) %> | <%= link_to "Search", new_search_path %>
       </div>
       <div class="right">
         <div class="join">
