--- a/app/views/rants/show.html.erb
+++ b/app/views/rants/show.html.erb
@@ -1,6 +1,6 @@
 <div class="dashboard">
   <div class="rant-input-left">
-    <img src= <%= current_user.image %>/>
+    <%= image_tag current_user.image.url(:thumb) %>
     <br>
 
     <div class="user">
@@ -19,7 +19,7 @@
     <h1><%= @rant.topic %></h1>
 
     <div class="other-img">
-      <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width=100px height=100px/>
+      <%= image_tag current_user.image.url(:thumb) %>
     </div>
     <h4>by <%= link_to @user.first_name.capitalize, user_path(@user.id) %></h4>
 
