--- a/app/views/follows/index.html.erb
+++ b/app/views/follows/index.html.erb
@@ -1,6 +1,6 @@
 <div class="dashboard">
   <div class="rant-input-left">
-    <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width=100px height=100px/>
+    <%= image_tag current_user.image.url(:thumb) %>
     <br>
 
     <div class="user">
