--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -55,7 +55,7 @@
         <%= f.radio_button :frequency, :monthly %>
       </div>
 
-      <%= f.file_field :avatar %>
+      <%= f.file_field :image %>
       <div>
         <%= f.submit "REGISTER", :class => 'button' %>
       </div>
