took out custom css and put in bootstrap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,413 +1,6 @@
-
-.homepage {
-  display: flex;
-  flex-direction: column;
-
-  .top-half {
-    display: flex;
-    background-color: white;
-    flex-direction: column;
-    padding-bottom: 0;
-
-  }
-
-    .rantly-title {
-      align-content: center;
-      display: flex;
-      background-color: white;
-    }
-
-    .letitout {
-      background-color: white;
-    }
-  }
-
-.gray {
-  background-color: gray;
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: baseline;
-  margin: 0 auto;
-  & > * {
-    padding: 2rem;
-  }
-}
-
-.logo {
-  flex: 0 0 10rem;
-  font-size: 24pt;
-  border-right: solid green;
-  font-family: sans-serif;
-}
-
-.middle {
-  flex: 1 1 auto;
-  text-align: right;
-  font-family: sans-serif;
-}
-
-.right {
-  flex: 0 0 15rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: sans-serif;
-}
-
-.login {
-  flex: 1 1 auto;
-  text-align: center;
-  font-size: 20pt;
-  font-family: sans-serif;
-}
-
-.join {
-  flex: 2 1 auto;
-  font-size: 24pt;
-  background-color: green;
-  text-align: center;
-  font-family: sans-serif;
-}
-
-.register-box {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  border: solid black;
-  margin-top: 50px;
-  margin-left: 20%;
-  margin-right: 20%;
-  padding: .75rem;
-  background-color: white;
-
-  .doubles {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-    text-align: left;
-  }
-
-  .row {
-    display: flex;
-    justify-content: space-between;
-    & > * {
-      flex: 0 0 45%;
-      padding: .25rem;
-    }
-  }
-
-  .bio {
-    display: flex;
-  }
-
-  .bio-box {
-    display: flex;
-    padding-bottom: .5rem;
-  }
-
-  #user_bio {
-    width: 100%;
-  }
-
-  .time {
-    display: flex;
-    padding-bottom: .5rem;
-  }
-
-  .frequency {
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: .5rem;
-  }
-}
-
-.login-box {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  border: solid black;
-  margin-top: 50px;
-  margin-left: 20%;
-  margin-right: 20%;
-  padding: .75rem;
-  background-color: white;
-
-  .username {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-    text-align: left;
-  }
-
-  .password {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-    text-align: left;
-  }
-
-  #user_username {
-    width: 100%;
-  }
-
-  #user_password {
-    width: 100%;
-    margin-bottom: 1rem
-  }
-}
-
-.text-field {
-  padding-bottom: .5rem;
-}
-
-
-.latest-rants {
-  width: 75%;
-  background-color: white;
-  padding: 10px;
-}
-
-.dashboard {
-  display: flex;
-  flex-direction: row;
-}
-
-
-.rants {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: baseline;
-
-  .rant-paragraph {
-    max-width: 700px;
-  }
-}
-
-.button {
-  font-size: 24pt;
-  width: 100%;
-  height: 60px;
-  background-color: green;
-  border: solid black;
-  color: white;
-
-}
-
-.spam {
-  display: inline;
-  padding: 5px;
-  font-size: 20pt;
-  width: 100%;
-  height: 40px;
-  background-color: red;
-  border: solid black;
-
-  a {
-    text-decoration: none;
-    color: white;
-  }
-}
-
-.tweet {
-  display: inline;
-  padding: 5px;
-  font-size: 20pt;
-  width: 100%;
-  height: 40px;
-  background-color: deepskyblue;
-  border: solid black;
-
-  a {
-    text-decoration: none;
-    color: white;
-  }
-}
-
-.flash {
-  padding: 1em;
-  color: green;
-  display: inline;
-  margin: auto;
-}
-
-.errors {
-  color: red;
-}
-
-.rant-input-left {
-  width: 25%;
-}
-
-.rant-form {
-  text-align: center;
-  display: block;
-  width: 100%;
-  input, textarea {
-    width: 90%;
-  }
-}
-
-.user {
-  text-align: center;
-  padding: .5rem;
-  font-size: 20px;
-
-  a {
-    color: white;
-  }
-}
-
-
-.topic {
-  text-align: left;
-  font-weight: bold;
-  font-family: sans-serif;
-  font-size: 17pt;
-}
-
-header {
-  background: black;
-  color: white;
-
-  a {
-    color: white;
-    text-decoration: none;
-  }
-}
-
-main {
-  .container {
-    background: white;
-  }
-}
-
-
-h1 {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 50px;
-  font-family: sans-serif;
-//  border-bottom: solid black;
-}
-
-
-h3 {
- text-align: center;
-  font-size: 50px;
-  font-family: sans-serif;
-  border-bottom: solid black;
-}
-
-h4 {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size: 24pt;
-  display: block;
-  float: left;
-  font-family: sans-serif;
-
-  a {
-    text-decoration: none;
-    color: black;
-  }
-}
-
-h5 {
-  text-align: center;
-  font-size: 20px;
-  font-family: sans-serif;
-}
-
-html {
-//  background-color: gray;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background-color: grey;
-}
-
-.about {
-  border-top: solid white;
-  padding-top: 1rem;
-}
-
-
-img {
-  display: block;
-  margin: auto;
-}
-
-.other-img {
-  float: left;
-  margin-left: 50px;
-}
-
-p {
-  margin-left: 10rem;
-  font-family: sans-serif;
-  text-decoration: none;
-
-  a {
-    text-decoration: none;
-    color: black;
-  }
-}
-
-.favorite {
-  font-family: sans-serif;
-  float: right;
-  padding-right: 4rem;
-}
-
-.font {
-  font-family: sans-serif;
-}
-
-.welcome-back {
-  background-color: green;
-  color: white;
-  text-align: center;
-  height: 3rem;
-  width: 100%;
-
-}
-
-.follow {
-  margin-top: 1rem;
-  a {
-    margin-left: .5rem;
-    text-decoration: none;
-    color: green;
-  }
-}
-
-.unfollow {
-  margin-top: 1rem;
-  a {
-    margin-left: .5rem;
-    text-decoration: none;
-    color: red;
-  }
-}
-
-.search-box {
-//  padding-bottom: .5rem;
-
-}
-
-.hide {
-  visibility: hidden;
-  display: none;
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+.col-md-4 {
+  display: center;
 }
