--- a/app/views/user_mailer/follow_rant_email.erb
+++ b/app/views/user_mailer/follow_rant_email.erb
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1><%= @ranter %> has just posted a new rant. Check it out here: <%= @rant_url %></h1>
+<h1><%= @user.first_name %> has just posted a new rant. Check it out here: <%= url_for(@url) %></h1>
 
 <br>
 
