--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,31 +1,32 @@
-<div class="homepage">
-  <div class="top-half">
 
-    <div class="flash">
-      <%= flash[:notice] if flash[:notice] %>
-    </div>
+<div class="flash">
+  <%= flash[:notice] if flash[:notice] %>
+</div>
 
-    <div class="rantly-title">
-      <h1>Rantly</h1>
-    </div>
-    <div class="letitout">
-      <h5>Let it all out</h5>
-    </div>
-
-    <!--<div class="welcome-back">HIHIHIHI</div>-->
-
-  </div>
-
-
-    <div style="position: absolute; left: 250px; top: 550px;">
-      <img src="https://avatars2.githubusercontent.com/u/161737?v=2&s=460" width="150" height="150"/>
-    </div>
-    <p style="width: 750px; position: absolute; left: 425px; top: 550px;">"Rantly has allowed a certain freedom I never
-      thought possible. Now I can rant to the internet
+<div class="jumbotron">
+  <div class="container">
+    <h1>Rantly</h1>
+    <p>Rantly has allowed a certain freedom I never thought possible. Now I can rant to the internet
       at large, without having to worry about my thoughts. I just type it out, hit click, and feel the surge
       of relief. Thanks Rantly, you've truly made my most inane rants heard. I remember a time when I wasn't
-      able to truly express myself. It's really frustrating when you want to be heard and no one..."</p>
+      able to truly express myself. It's really frustrating when you want to be heard and no one...</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign up now »</a></p>
+  </div>
+</div>
 
-    <p style="position: absolute; left: 425px; top: 650px;">| Jeff Taggart, avid Ranter</p>
+<div class="container">
+  <!-- Example row of columns -->
+  <div class="row">
+    <div class="col-md-4">
+      <h2>Rant it loud.</h2>
 
+    </div>
+    <div class="col-md-4">
+      <h2>Rant it proud.</h2>
+
+    </div>
+    <div class="col-md-4">
+      <h2>Rant it now.</h2>
+
+    </div>
   </div>
