--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,41 +1,93 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Rantly</title>
-  <%= stylesheet_link_tag 'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<header>
-  <div class="container">
-    <div class="logo">
-      <%= link_to "Rant.ly", dashboard_path %>
-    </div>
-    <% if current_user %>
-      <div class="middle">
-        <%= link_to "Dashboard", dashboard_path %> | <%= link_to "Following", user_follows_path(current_user.id) %>
-        | <%= link_to "Favorites", user_favorites_path(current_user.id) %> | <%= link_to "Search", new_search_path %>
+<html lang="en"><head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Jumbotron Template for Bootstrap</title>
+
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <%= csrf_meta_tags %>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="jumbotron.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Rantly</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <% if current_user %>
+          <ul class="nav navbar-nav">
+              <li class="active"><a href="/dashboard">Dashboard</a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+              <li class="active"><%= link_to "Following", user_follows_path(current_user.id) %></li>
+          </ul>
+          <ul class="nav navbar-nav">
+              <li class="active"><%= link_to "Favorites", user_favorites_path(current_user.id) %></li>
+          </ul>
+          <ul class="nav navbar-nav">
+              <li class="active"><%= link_to "Search", new_search_path %></li>
+          </ul>
+          <% end %>
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+              <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">Sign in</button>
+          </form>
+        </div><!--/.navbar-collapse -->
       </div>
-      <div class="right">
-        <div class="join">
-          <%= link_to "Logout", logout_path %>
-        </div>
-    <% else %>
-      <div class="right">
-        <div class="login">
-          <%= link_to "Login", login_path %>
-        </div>
-        <div class="join">
-          <%= link_to "Join", new_user_path %>
-        </div>
-    <% end %>
-    </div>
-    </div>
-  </div>
-</header>
+    </nav>
 
-<%= yield %>
+      <hr>
 
-</body>
-</html>
+      <%= yield %>
+
+      <footer>
+
+      </footer>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
+
+</body></html>
