--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,4 @@
-<div class="gray">
-  <div class="register-box">
-    <div class="">
-      <h3>Register</h3>
-    </div>
+
     <%= form_for @user do |f| %>
 
       <% if @user.errors.any? %>
@@ -12,67 +8,44 @@
       <% end %>
 
 
-      <div class="doubles">
-        <div class="row">
-          <%= f.label :username %>
-          <%= f.label :password %>
-        </div>
-        <div class="row">
-          <%= f.text_field :username, autofocus: true %>
-          <%= f.password_field :password %>
-        </div>
-      </div>
-      <br>
 
-      <div class="doubles">
-        <div class="row">
-          <%= f.label :first_name %>
-          <%= f.label :last_name %>
-        </div>
-        <div class="row">
-          <%= f.text_field :first_name %>
-          <%= f.text_field :last_name %>
-        </div>
-      </div>
-      <br>
 
-      <div class="doubles">
-        <div class="row">
-          <%= f.label :email %>
-        </div>
-        <div class="row">
-          <%= f.email_field :email, autofocus: true %>
-        </div>
-      </div>
 
-      <br>
+      <body>
 
-      <div class="bio">
-        <%= f.label :bio %>
-      </div>
-      <div class="bio-box">
-        <%= f.text_area :bio, :rows => 10 %>
-      </div>
+        <div class="container">
 
-      <div class="time">
-        <%= "How often do you rant?" %>
-      </div>
-      <div class="frequency">
-        <%= f.label :Daily %>
-        <%= f.radio_button :frequency, :daily %>
+          <form class="form-signin">
+            <h2 class="form-signin-heading">Sign up for Rantly!</h2>
+          <p>
+            <label for="inputEmail" class="sr-only">First Name</label>
+            <%= f.text_field :email, autofocus: true, placeholder: "First Name", class: "form-control" %>
+          </p>
+          <p>
+            <label for="inputEmail" class="sr-only">Last Name</label>
+            <%= f.text  _field :email, autofocus: true, placeholder: "Last Name", class: "form-control" %>
+          </p>
+          <p>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <%= f.email_field :email, autofocus: true, placeholder: "Email Address", class: "form-control" %>
+          </p>
+          <p>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <%= f.password_field :password, autofocus: true, placeholder: "Password", class: "form-control" %>
+          </p>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="remember-me"> Remember me
+              </label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+          </form>
+          <% end %>
+        </div> <!-- /container -->
 
-        <%= f.label :Weekly %>
-        <%= f.radio_button :frequency, :weekly %>
 
-        <%= f.label :Monthly %>
-        <%= f.radio_button :frequency, :monthly %>
-      </div>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
-      <%= f.file_field :image %>
-      <div>
-        <%= f.submit "REGISTER", :class => 'button' %>
-      </div>
 
-    <% end %>
-  </div>
-</div>
+    </body></html>
